[metadata]
name = gatemine
author = OpenStack
author-email = openstack-dev@lists.openstack.org
summary = Tools for mining data out of OpenStack log files
description-file =
    HACKING.rst
home-page = http://github.com/sdague/gatemine
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Environment :: OpenStack
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python

[files]
packages =
    gatemine

[global]
setup-hooks =
    pbr.hooks.setup_hook

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0
